# resize-func-pulumi

./: Pulumi.yaml  README.md  __main__.py  pyproject.toml  readmd.md
.devcontainer/: devcontainer.json
lambda/: handler.py
